# learn-vulkan

./: .clang-format  .clang-format-bkup  CMakeLists.txt  README.md  main.cpp  vcpkg.json
core/: CMakeLists.txt  core.h  logging.h  math.h  typedefs.h  uassert.h
lve/: CMakeLists.txt  first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  lve_buffer.cpp  lve_buffer.h  lve_camera.cpp  lve_camera.h  lve_descriptors.cpp  lve_descriptors.h  lve_device.cpp  lve_device.h  lve_frame_info.h  lve_game_object.cpp  lve_game_object.h  lve_model.cpp  lve_model.h  lve_pipeline.cpp  lve_pipeline.h  lve_renderer.cpp  lve_renderer.h  lve_swapchain.cpp  lve_swapchain.h  lve_utils.h  lve_window.cpp  lve_window.h  main.cpp  rainbow_system.h  simple_render_system.cpp  simple_render_system.h  vector_field_app.cpp  vector_field_app.h
lve/shaders/: compile.sh  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
lve/system/: gravity_physics_system.h  point_light_system.cpp  point_light_system.h  rainbow_system.h  simple_render_system.cpp  simple_render_system.h  vector_field_system.h
playground/: CMakeLists.txt  app.cpp  main.cpp  print.cpp  print.h
tutorial/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h  main.cpp  shader.h  test_app.cpp
tutorial/shaders/: shader.frag  shader.vert
